js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-arrow-import-source-empty-str-is-valid-assign-expr.js
let
f
=
(
)
=
>
{
import
.
source
(
'
<
module
source
>
'
)
;
}
;
reportCompare
(
0
0
)
;
