js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-import-defer-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
{
import
.
defer
(
)
;
}
;
